add shared library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
+    "paths": {
+      "lms-shared": ["./projects/lms-shared/src/public-api.ts"]
+    },
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
