--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prisma:generate": "npx prisma generate",
     "translate": "cd translations && node translate-generate.js ",
     "deploy": "npm run translate && ng build  --configuration production  --base-href /manazel-alabrar-fe/ && cp dist/manazel-alabrar-fe/index.html dist/manazel-alabrar-fe/404.html",
-    "analyzer": "ng build  --configuration production --build-optimizer --stats-json && webpack-bundle-analyzer dist/manazel-alabrar-fe/stats.json",
+    "analyzer": "ng build admin  --configuration production --stats-json && npx esbuild-visualizer --metadata=dist/admin/stats.json && open stats.html",
     "serve:ssr:manazel-alabrar-fe": "node dist/manazel-alabrar-fe/server/server.mjs",
     "lint": "ng lint",
     "prepare": "husky"
@@ -62,6 +62,7 @@
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
+    "esbuild-visualizer": "^0.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -72,10 +73,11 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.2.0",
     "prettier": "^3.2.5",
     "prisma": "^5.10.2",
     "prisma-json-schema-generator": "^5.1.1",
     "typescript": "~5.3.3",
-    "webpack-bundle-analyzer": "^4.8.0"
+    "typescript-json-schema": "^0.63.0"
   }
 }
