--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build --configuration production ",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prisma:generate": "npx prisma generate",
+    "preprisma:generate": "npm run build --prefix prisma-idt-generator && npm i ./prisma-idt-generator",
+    "prisma:generate": "npx prisma generate && npx prettier projects/admin/src/core/services/api.service.ts --write ",
     "translate": "cd translations && node translate-generate.js ",
     "deploy": "npm run translate && ng build  --configuration production  --base-href /manazel-alabrar-fe/ && cp dist/manazel-alabrar-fe/index.html dist/manazel-alabrar-fe/404.html",
     "analyzer": "ng build  --configuration production --build-optimizer --stats-json && webpack-bundle-analyzer dist/manazel-alabrar-fe/stats.json",
@@ -41,6 +42,7 @@
     "jquery": "^3.6.1",
     "marked": "^5.0.0",
     "ngx-extended-pdf-viewer": "^19.0.0",
+    "prisma-idt-generator": "file:prisma-idt-generator",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.4.8",
     "swiper": "^9.2.0",
