--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "preprisma:generate": "npm run build --prefix prisma-idt-generator && npm i ./prisma-idt-generator",
-    "prisma:generate": "npx prisma generate && npx prettier projects/admin/src/core/services/api.service.ts --write ",
+    "prisma:generate": "npx prisma generate && npx prettier projects/admin/src/core/services/api.service.ts --write && npx prettier src/app/core/models/dummy-interfaces.ts --write",
     "translate": "cd translations && node translate-generate.js ",
     "deploy": "npm run translate && ng build  --configuration production  --base-href /manazel-alabrar-fe/ && cp dist/manazel-alabrar-fe/index.html dist/manazel-alabrar-fe/404.html",
     "analyzer": "ng build  --configuration production --build-optimizer --stats-json && webpack-bundle-analyzer dist/manazel-alabrar-fe/stats.json",
     "serve:ssr:manazel-alabrar-fe": "node dist/manazel-alabrar-fe/server/server.mjs",
     "lint": "ng lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "json-schema-fields": "ts-json-schema-generator --path './src/app/core/models/json-schema-fields.ts'  --out 'src/app/core/models/json-schema-fields.json' "
   },
   "private": true,
   "dependencies": {
@@ -76,6 +77,7 @@
     "prettier": "^3.2.5",
     "prisma": "^5.10.2",
     "prisma-json-schema-generator": "^5.1.1",
+    "ts-json-schema-generator": "^2.1.0",
     "typescript": "~5.3.3",
     "webpack-bundle-analyzer": "^4.8.0"
   }
