--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "admin-ar": "ng s admin --configuration=ar",
+    "i18n-admin": "ng extract-i18n --project admin",
+    "build-admin": "ng build --project admin --localize",
     "prebuild": "npm run translate && npm run postprebuild",
     "postprebuild": "prettier ./src/app/core/models --write && prettier ./src/assets/i18n --write ",
     "build": "ng build --configuration production ",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "preprisma:generate": "npm run build --prefix prisma-idt-generator && npm i ./prisma-idt-generator",
-    "prisma:generate": "npx prisma generate && npx prettier projects/admin/src/core/services/api.service.ts --write && npx prettier src/app/core/models/dummy-interfaces.ts --write",
+    "prisma:generate": "npx prisma generate && npx prettier projects/admin/src/core/services/api.service.ts --write && npx prettier src/app/core/models/dummy-interfaces.ts --write && npx prettier projects/admin/src/app/translations/ --write",
     "translate": "cd translations && node translate-generate.js ",
     "deploy": "npm run translate && ng build  --configuration production  --base-href /manazel-alabrar-fe/ && cp dist/manazel-alabrar-fe/index.html dist/manazel-alabrar-fe/404.html",
     "analyzer": "ng build  --configuration production --build-optimizer --stats-json && webpack-bundle-analyzer dist/manazel-alabrar-fe/stats.json",
@@ -59,6 +62,7 @@
     "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "~17.2.3",
     "@angular/compiler-cli": "^17.2.4",
+    "@angular/localize": "^17.2.4",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.18.0",
