--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
   "recommendations": [
     "angular.ng-template",
-    "johnpapa.angular-essentials"
+    "johnpapa.angular-essentials",
+    "roman-lo.vscode-ng-i18n-editor",
+    "rvanbekkum.xliff-sync"
   ]
 }
