prepare to deploy 2 vercel

--- a/angular.json
+++ b/angular.json
@@ -112,7 +112,7 @@
         "locales": {
           "ar": {
             "translation": "projects/admin/src/locale/messages(ar-${region}).xlf",
-            "baseHref": "ar"
+            "baseHref": "/ar/"
           }
         }
       },
@@ -124,7 +124,11 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "localize": ["ar"],
-            "outputPath": "dist/admin",
+            "baseHref": "/admin",
+            "outputPath": {
+              "base": "dist/admin",
+              "browser": ""
+            },
             "index": "projects/admin/src/index.html",
             "browser": "projects/admin/src/main.ts",
             "polyfills": ["zone.js"],
