--- a/angular.json
+++ b/angular.json
@@ -124,7 +124,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "localize": ["ar"],
-            "baseHref": "/admin",
+            "baseHref": "/",
             "outputPath": {
               "base": "dist/admin",
               "browser": ""
