--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    {"source": "/api/", "destination": "https://lms-be-hadi-kashlans-projects.vercel.app/api/"},
-    {"source": "/api/:match*", "destination": "https://lms-be-hadi-kashlans-projects.vercel.app/api/:match*"}
+    { "source": "/api/", "destination": "https://lms-be.manazel-alabrar.com/api/" },
+    { "source": "/api/:match*", "destination": "https://lms-be.manazel-alabrar.com/api/:match*" }
   ]
 }
