--- a/angular.json
+++ b/angular.json
@@ -23,16 +23,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "node_modules/ngx-extended-pdf-viewer/assets/",
-                "output": "/assets/"
-              },
-              "src/manifest.webmanifest"
-            ],
+            "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
             "styles": ["src/styles.scss"],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -235,7 +226,15 @@
             "polyfills": ["zone.js"],
             "tsConfig": "projects/lms/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["projects/lms/src/favicon.ico", "projects/lms/src/assets"],
+            "assets": [
+              "projects/lms/src/favicon.ico",
+              "projects/lms/src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-extended-pdf-viewer/assets/",
+                "output": "/assets/"
+              }
+            ],
             "styles": ["projects/lms/src/styles.scss"],
             "scripts": []
           },
