--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "analyzer": "ng build  --configuration production --build-optimizer --stats-json && webpack-bundle-analyzer dist/manazel-alabrar-fe/stats.json",
     "serve:ssr:manazel-alabrar-fe": "node dist/manazel-alabrar-fe/server/server.mjs",
     "lint": "ng lint",
+    "dev:server": "tsx watch projects/server",
     "prepare": "husky"
   },
   "private": true,
@@ -43,7 +44,10 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@prisma/client": "^5.10.2",
+    "@trpc/client": "next",
+    "@trpc/server": "next",
     "@types/marked": "^4.3.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jquery": "^3.6.1",
     "marked": "^5.0.0",
@@ -66,6 +70,7 @@
     "@angular/cli": "~17.2.3",
     "@angular/compiler-cli": "^17.2.4",
     "@angular/localize": "^17.2.4",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.18.0",
@@ -84,6 +89,7 @@
     "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
     "prisma": "^5.10.2",
+    "tsx": "^4.0.0",
     "typescript": "~5.3.3",
     "webpack-bundle-analyzer": "^4.8.0"
   },
