--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "admin-ar": "ng s admin --configuration=ar",
     "i18n-admin": "ng extract-i18n --project admin",
-    "prebuild-admin": "npm run prisma:generate",
-    "build-admin": "ng build  --project admin --localize",
+    "build-admin": "npm run build:server",
     "prebuild-lms": "npm run prisma:generate",
     "build-lms": "ng build  --project lms --localize",
     "build-site": "ng build --configuration production",
