--- a/projects/server/tsconfig.app.json
+++ b/projects/server/tsconfig.app.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/app",
+    "outDir": "../../dist/admin",
     "types": []
   },
   "files": ["./index.ts"],
