disable service worker

--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,7 @@
                 }
               ],
               "outputHashing": "all",
-              "serviceWorker": "ngsw-config.json"
+              "serviceWorker": false
             },
             "development": {
               "optimization": false,
