--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,7 @@
                 }
               ],
               "outputHashing": "all",
-              "serviceWorker": false
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
@@ -252,6 +252,7 @@
                   "maximumError": "4kb"
                 }
               ],
+              "serviceWorker": "ngsw-config.json",
               "outputHashing": "all"
             },
             "development": {
